--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>css-whisperer-pro</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <title>Plint - Universal Business Platform</title>
+    <meta name="description" content="Universal ordering platform for any business - restaurants, retail, services and more" />
+    <meta name="author" content="Plint" />
 
-    <meta property="og:title" content="css-whisperer-pro" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Plint - Universal Business Platform" />
+    <meta property="og:description" content="Universal ordering platform for any business - restaurants, retail, services and more" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
