--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     
+    <!-- Google Fonts: Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
     <!-- Critical CSS inline to prevent render blocking -->
     <style>
       /* Critical above-the-fold styles */
       body { 
         margin: 0; 
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        font-family: 'Poppins', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
         background-color: #ffffff;
         color: #1a1a1a;
         line-height: 1.6;
