--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
     <link rel="modulepreload" href="/src/main.tsx">
     <link rel="modulepreload" href="/src/App.tsx">
     
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
     <title>Plint - Universal Business Platform</title>
     <meta name="description" content="Universal ordering platform for any business - restaurants, retail, services and more" />
     <meta name="author" content="Plint" />
@@ -69,11 +75,10 @@
     <meta property="og:title" content="Plint - Universal Business Platform" />
     <meta property="og:description" content="Universal ordering platform for any business - restaurants, retail, services and more" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/android-chrome-512x512.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/android-chrome-512x512.png" />
   </head>
 
   <body>
